Fix overflow z index

--- a/components/ChipsList/ChipsList.css
+++ b/components/ChipsList/ChipsList.css
@@ -26,7 +26,7 @@
   left: 0;
   width: 25px;
   background: linear-gradient(to right, white 10%, transparent);
-  z-index: 1800;
+  z-index: 1300;
 }
 
 .chips-list-wrap .chips-overflow-right {
@@ -37,5 +37,5 @@
   right: 0;
   width: 25px;
   background: linear-gradient(to right, transparent, white 90%);
-  z-index: 1800;
+  z-index: 1300;
 }
