--- a/components/Gallery/Gallery.css
+++ b/components/Gallery/Gallery.css
@@ -55,7 +55,7 @@
   left: 0;
   width: 25px;
   background: linear-gradient(to right, white 10%, transparent);
-  z-index: 1800;
+  z-index: 1300;
 }
 
 .gallery-wrap .gallery-overflow-right {
@@ -66,7 +66,7 @@
   right: 0;
   width: 25px;
   background: linear-gradient(to left, white 10%, transparent);
-  z-index: 1800;
+  z-index: 1300;
 }
 
 .gallery-full-screen {
